# atividade-gen-ai-rocket-lab-2026

./: .env.exemple  README.md  pyproject.toml  requirements.txt
backend/: .env.example  requirements.txt  seed.py
backend/alembic/versions/: 165e549961eb_setup_inicial_com_cascade.py
backend/app/: config.py  main.py
backend/app/agent/: main.py
backend/app/agent/agents/: agent.py  judge_agent.py
backend/app/exceptions/: handler.py
backend/app/models/: __init__.py  avaliacao_pedido.py  categoria_imagem.py  consumidor.py  item_pedido.py  pedido.py  produto.py  vendedor.py
backend/app/repositories/: avaliacoes_pedido_repository.py  consumidor_repository.py  item_pedido_repository.py  pedido_repository.py  produto_repository.py  vendedor_repository.py
backend/app/routes/: agent_routes.py  avaliacoes_pedido_routes.py  produtos_routes.py
backend/app/schemas/: agent_schema.py  avaliacoes_pedido_schema.py  produto_schema.py
backend/app/services/: avaliacoes_pedido_service.py  produto_service.py
backend/app/utils/: base_repository.py  db.py  pagination_schema.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/atoms/: custom-button.tsx  custom-footer.tsx  custom-icon.tsx  custom-image.tsx  custom-input.tsx  custom-logo.tsx
frontend/src/models/: avaliacao.model.tsx  categorias.tsx  produto-card.model.tsx  produto-details.model.tsx
frontend/src/pages/: create-product.tsx  edit-product.tsx  home-page.tsx  product-page.tsx
src/: main.py
src/agents/: agent.py  judge_agent.py
src/utils/: db.py
(+6 files in other folders)
